[package]
name = "swap"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
solana-client = "~1.17.17"
solana-logger = "~1.17.17"
solana-program = "~1.17.17"
solana-sdk = "~1.17.17"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
spl-token-2022 = "2.0.1"
